--- a/index.html
+++ b/index.html
@@ -186,11 +186,8 @@
                             <div class="row">
                                 <div class="col-xl-8">
                                     <div class="main-slider__one-item__content">
-                                        <h2>Da tu salto<br> profesional</h2>
-                                        <a href="about.html" class="main-slider__one-item__content-curved-circle-box">
-                                            <div class="main-slider__one-item__content-arrow-down">
-                                            </div><!-- curved-circle icon -->
-                                        </a>
+                                        <h2>Da tu salto<br> profesional</h2><br></br>
+                                        <h5>Pasa de 0 a 100 en menos de 2 meses con nuestros <br>bootcamps presenciales intensivos 100% subvencionados</h5>
                                     </div>
                                 </div>
                             </div>
@@ -215,7 +212,7 @@
                             <div class="row">
                                 <div class="col-xl-8">
                                     <div class="main-slider__one-item__content">
-                                        <h2>Programa de aceleración de talentosy</h2>
+                                        <h2>Programa de aceleración de talentos</h2>
                                         <a href="about.html" class="main-slider__one-item__content-curved-circle-box">
                                             <div class="curved-circle">
                                                 <!-- curved-circle start-->
