--- a/program.html
+++ b/program.html
@@ -431,7 +431,7 @@
               data-wow-delay="400ms"
             >
               <h3 class="section-title__title">Reto</h3>
-              <br/>
+              <br />
               <p class="services-details__content__text">
                 Aunque este programa no incluye un reto principal formal como
                 hackathons o competiciones, los participantes tendrán acceso a
@@ -622,10 +622,10 @@
           >
             <a href="index.html" class="main-footer__logo">
               <img
-                src="assets/images/footer-logo.png"
-                alt="ogency"
-                width="55"
-                height="55"
+                src="assets/images/logo/phimister_logo.avif"
+                width="262"
+                height="112"
+                alt="Phimister"
               /> </a
             ><!-- /.footer-logo -->
             <div class="main-footer__social">
@@ -649,8 +649,12 @@
               data-wow-delay="200ms"
             >
               <div class="main-footer__about">
-                <p class="footer-widget__text">Let’s start working together</p>
-                <a href="mailto:help@company.com">help@company.com</a>
+                <p class="footer-widget__text">
+                  Impulsemos tu camino profesional
+                </p>
+                <a href="mailto:info@phimistersbschool.com"
+                  >info@phimistersbschool.com</a
+                >
               </div>
               <!-- /.footer-widget -->
             </div>
@@ -660,11 +664,11 @@
             >
               <div class="main-footer__navmenu">
                 <ul>
-                  <li><a href="about.html">About</a></li>
-                  <li><a href="team.html">Meet the Team</a></li>
-                  <li><a href="blog-grid-right.html">News & Media</a></li>
-                  <li><a href="projects.html">Our Projects</a></li>
-                  <li><a href="contact.html">Contact</a></li>
+                  <li><a href="about.html">Sobre nosotros</a></li>
+                  <li><a href="team.html">Conoce al equipo</a></li>
+                  <li><a href="blog-grid-right.html">Blog</a></li>
+                  <li><a href="projects.html">Nuestros programas</a></li>
+                  <li><a href="contact.html">Contacto</a></li>
                 </ul>
                 <!-- /.list-unstyled -->
               </div>
@@ -676,10 +680,8 @@
             >
               <div class="main-footer__navmenu">
                 <ul>
-                  <li><a href="faq.html">Our Faqs</a></li>
-                  <li><a href="gallery.html">Gallery</a></li>
-                  <li><a href="services.html">Services</a></li>
-                  <li><a href="contact.html">Help</a></li>
+                  <li><a href="faq.html">Políticas de privacidad</a></li>
+                  <li><a href="gallery.html">Términos de uso</a></li>
                 </ul>
                 <!-- /.list-unstyled -->
               </div>
@@ -693,7 +695,7 @@
           >
             © Copyright <span class="dynamic-year"></span
             ><!-- /.dynamic-year -->
-            by <a href="index.html">Ogency Template</a>
+            by <a href="index.html">Dok7</a>
           </p>
         </div>
         <!-- /.container -->
