--- a/index.html
+++ b/index.html
@@ -154,6 +154,99 @@
         <div class="stricky-header stricked-menu main-menu">
             <div class="sticky-header__content"></div><!-- /.sticky-header__content -->
         </div><!-- /.stricky-header -->
+
+        <!--Main Slider Start-->
+        <section class="main-slider">
+            <div class="main-slider__two ogency-owl__carousel owl-carousel" data-owl-options='{
+        "loop": true,
+        "animateOut": "slideOutDown",
+        "animateIn": "fadeIn",
+        "items": 1,
+        "autoplay": 6000,
+        "autoplayTimeout": 7000,
+        "smartSpeed": 1000,
+        "nav": false,
+        "navText": ["<span class=\"icon-left-arrow\"></span>","<span class=\"icon-right-arrow\"></span>"],
+        "dots": true,
+        "margin": 0
+        }'>
+                <div class="item">
+                    <!-- slider item start -->
+                    <div class="main-slider__two__item">
+                        <!-- bg image start -->
+                        <div class="main-slider__two__bg" style="background-image: url(assets/images/backgrounds/page-header-bg-1-1.jpg);"></div>
+                        <!-- bg image end -->
+                        <!-- bg image overlay start -->
+                        <div class="main-slider__two__overlay" style="background-image: url(assets/images/backgrounds/slider-2-bg-overlay.png);"></div>
+                        <!-- bg image overlay end -->
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-xl-12">
+                                    <div class="main-slider__two__content text-center">
+                                        <div class="main-slider__two__dots"><span></span><span></span></div><!-- slider-dots -->
+                                        <h2 class="main-slider__two__content__title">
+                                            DA TU SALTO<a href="https://www.youtube.com/watch?v=Get7rqXYrbQ" class="video-popup">
+                                                <img src="assets/images/backgrounds/video-bg-1-2.jpg" alt="ogency">
+                                                <span class="fa fa-play"></span>
+                                            </a>PROFESIONAL<a href="about.html" class="main-slider__two__btn"><span class="icon-down-right"></span></a><!-- slider-btn -->
+                                        </h2><!-- slider-title -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div><!-- slider item end -->
+                <div class="item">
+                    <!-- slider item start -->
+                    <div class="main-slider__two__item">
+                        <!-- bg image start -->
+                        <div class="main-slider__two__bg" style="background-image: url(assets/images/backgrounds/page-header-bg-1-2.jpg);"></div>
+                        <!-- bg image end -->
+                        <!-- bg image overlay start -->
+                        <div class="main-slider__two__overlay" style="background-image: url(assets/images/backgrounds/slider-2-bg-overlay.png);"></div>
+                        <!-- bg image overlay end -->
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-xl-12">
+                                    <div class="main-slider__two__content text-center">
+                                        <div class="main-slider__two__dots"><span></span><span></span></div><!-- slider-dots -->
+                                        <h2 class="main-slider__two__content__title">
+                                            ESPAÑA EMPRENDE
+                                            <div class="h1">
+                                            </a>Inscripción 2025<a href="about.html" class="main-slider__two__btn"><span class="icon-down-right"></span></a><!-- slider-btn -->
+                                            </div>
+                                        </h2><!-- slider-title -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div><!-- slider item end -->
+                <div class="item">
+                    <!-- slider item start -->
+                    <div class="main-slider__two__item">
+                        <!-- bg image start -->
+                        <div class="main-slider__two__bg" style="background-image: url(assets/images/backgrounds/page-header-bg-1-3.jpg);"></div>
+                        <!-- bg image end -->
+                        <!-- bg image overlay start -->
+                        <div class="main-slider__two__overlay" style="background-image: url(assets/images/backgrounds/slider-2-bg-overlay.png);"></div>
+                        <!-- bg image overlay end -->
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-xl-12">
+                                    <div class="main-slider__two__content text-center">
+                                        <div class="main-slider__two__dots"><span></span><span></span></div><!-- slider-dots -->
+                                        <h2 class="main-slider__two__content__title">PROGRAMA DE ACELERACIÓN  DE TALENTOS</h2><!-- slider-title -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div><!-- slider item end -->
+            </div>
+        </section>
+        <!--Main Slider End-->
+
         <!--Main Slider Start-->
         <section class="main-slider" id="home">
             <div class="main-slider__one ogency-owl__carousel owl-carousel" data-owl-options='{
@@ -718,52 +811,67 @@
         <!-- Filosofia Start -->
 
         <!--Contact Start-->
-        <section class="contact-two">
-            <div class="container wow fadeInUp animated" data-wow-delay="300ms">
-                <div class="section-title text-center">
-                    <h5 class="section-title__tagline section-title__tagline--has-dots">Contáctanos</h5>
-                    <h2 class="section-title__title">Formación 100% subvencionada y gratuita</h2>
-                </div><!-- section-title -->
-                <div class="contact-one__left text-center">
-                    <div class="contact-one__form-box">
-                        <form action="assets/inc/sendemail.php" class="contact-one__form contact-form-validated" novalidate="novalidate">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <div class="contact-one__input-box">
-                                        <input type="text" placeholder="Tu nombre" name="name">
+        <section class="contact-one">
+            <div class="contact-one__bg" style="background-image: url(assets/images/backgrounds/contact-bg-1.jpg);"></div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 wow fadeInLeft animated" data-wow-delay="200ms">
+                        <div class="contact-one__left">
+                            <div class="section-title">
+                                <h5 class="section-title__tagline section-title__tagline--has-dots">Contáctanos</h5>
+                                <h2 class="section-title__title">Formación 100% subvencionada y gratuita</h2>
+                            </div><!-- section-title -->
+                            <div class="contact-one__form-box">
+                                <form action="assets/inc/sendemail.php" class="contact-one__form contact-form-validated" novalidate="novalidate">
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <div class="contact-one__input-box">
+                                                <input type="text" placeholder="Tu nombre" name="name">
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="contact-one__input-box">
+                                                <input type="email" placeholder="Tu email" name="email">
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="contact-one__input-box">
+                                                <input type="text" placeholder="Tu móvil" name="phone">
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="contact-one__input-box">
+                                                <select class="selectpicker" aria-label="Default select example">
+                                                    <option selected>Selecciona el programa</option>
+                                                    <option value="1">España emprende</option>
+                                                    <option value="2">PICE</option>
+                                                    <option value="3">PAEM</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-12">
+                                            <div class="contact-one__input-box text-message-box">
+                                                <textarea name="message" placeholder="Comentario (opcional)"></textarea>
+                                            </div>
+                                            <div class="contact-one__btn-box">
+                                                <button type="submit" class="ogency-btn">Enviar</button>
+                                            </div>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="contact-one__input-box">
-                                        <input type="email" placeholder="Tu email" name="email">
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="contact-one__input-box">
-                                        <input type="text" placeholder="Tu móvil" name="phone">
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="contact-one__input-box">
-                                        <select class="selectpicker" aria-label="Default select example">
-                                            <option selected>Selecciona el programa</option>
-                                            <option value="1">España emprende</option>
-                                            <option value="2">PICE</option>
-                                            <option value="3">PAEM</option>
-                                        </select>
-                                    </div>
-                                </div>
-                                <div class="col-md-12">
-                                    <div class="contact-one__input-box text-message-box">
-                                        <textarea name="message" placeholder="Comentario (opcional)"></textarea>
-                                    </div>
-                                    <div class="contact-one__btn-box">
-                                        <button type="submit" class="ogency-btn">Enviar mensaje</button>
-                                    </div>
-                                </div>
+                                </form>
+                                <div class="result"></div>
                             </div>
-                        </form>
-                        <div class="result"></div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="ogency-stretch-element-inside-column">
+                            <div class="ogency-stretch__image wow slideInRight animated" data-wow-delay="400ms">
+                                <img src="assets/images/resources/contact-1.jpg" alt="ogency">
+                                <div class="ogency-stretch__image__angle-top"></div>
+                                <div class="ogency-stretch__image__angle-middle"></div>
+                                <div class="ogency-stretch__image__angle-bottom"></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
