--- a/index.html
+++ b/index.html
@@ -472,60 +472,94 @@
         </section>
         <!-- Sliding Text Start-->
 
-        <!-- Project Start -->
-        <section class="project-one @@extraClassName" id="portfolio">
-            <div class="container">
-                <div class="row">
+        <!-- Service Start -->
+        <section class="service-three service-three--service-page">
+            <div class="container service-three__container">
+                <div class="row d-flex justify-content-center align-items-center">
                     <div class="col-md-8">
                         <div class="section-title">
-                            <h5 class="section-title__tagline section-title__tagline--has-dots">
-                                Un bootcamp intensivo para descubrir tu propósito laboral</h5>
-                            <h2 class="section-title__title">MÉTODO SEED</h2>
+                            <div class="col-md-8 offset-md-2 text-center">
+                                <h2 class="section-title__title">MÉTODO SEED<br/></h2>
+                                <h5 > Es un proceso diseñado para acompañar a los emprendedores desde la alineación 
+                                    de sus valores y propósito personal hasta la creación y optimización de su proyecto,
+                                     guiándolos paso a paso para transformar sus ideas en negocios reales y sostenibles 
+                                     con impacto.
+                                </h5>
+                            </div>
                         </div><!-- section-title -->
                     </div>
-                    <div class="col-md-4 text-end">
-                        <a href="projects.html" class="ogency-btn">Ver todo</a><!-- section-btn -->
-                    </div>
+                <div class="row d-flex justify-content-center align-items-center">
+                    <div class="col-xl-3 col-md-6 wow fadeInUp animated" data-wow-delay="100ms">
+                        <div class="service-three__item">
+                            <div class="service-three__item__thumb">
+                                <img src="assets/images/service/services-3-1.jpg" alt="ogency" />
+                            </div><!-- /.service-image -->
+                            <div class="service-three__item__normal">
+                                <h3 class="service-three__item__normal__title">Spark</h3>
+                            </div><!-- /.service-normal-content -->
+                            <div class="service-three__item__hover">
+                                <h3 class="service-three__item__hover__title">
+                                    <a href="website-development.html">Spark</a>
+                                </h3><!-- /.service-title -->
+                                <p class="service-three__item__hover__text">En esta fase inicial, alinearás tus valores con los de tu emprendimiento, harás una autoevaluación como emprendedor y realizarás un análisis de mercado para comprender tu entorno competitivo.</p><!-- /.service-content -->
+                            </div><!-- /.service-hover-content -->
+                        </div><!-- /.service-card-three -->
+                    </div><!-- /.column -->
+                    <div class="col-xl-3 col-md-6 wow fadeInUp animated" data-wow-delay="200ms">
+                        <div class="service-three__item">
+                            <div class="service-three__item__thumb">
+                                <img src="assets/images/service/services-3-2.jpg" alt="ogency" />
+                            </div><!-- /.service-image -->
+                            <div class="service-three__item__normal">
+                                <h3 class="service-three__item__normal__title">Emerge</h3>
+                            </div><!-- /.service-normal-content -->
+                            <div class="service-three__item__hover">
+                                <h3 class="service-three__item__hover__title">
+                                    <a href="graphic-designing.html">Emerge</a>
+                                </h3><!-- /.service-title -->
+                                <p class="service-three__item__hover__text">En esta fase, construirás tu idea de negocio usando herramientas como el Buyer Persona, el Mapa de Empatía y la técnica Crazy 8. Definirás tu propuesta de valor y crearás un prototipo básico para probar con tu audiencia.</p><!-- /.service-content -->
+                            </div><!-- /.service-hover-content -->
+                        </div><!-- /.service-card-three -->
+                    </div><!-- /.column -->
                 </div>
-                <div class="row">
-                    <div class="col-md-12">
-                        <div href="project-details.html" class="project-one__item wow fadeInUp animated animated" data-wow-delay="100ms">
-                            <div class="project-one__item__wrapper">
-                                <span class="project-one__item__number"></span>
-                                <h3 class="project-one__item__title">Spark</h3><!-- /.project-title -->
-                                <div class="project-one__item__btn"><span class="icon-down-right"></span></div><!-- /.project-btn -->
-                                <div class="project-one__item__hover"><p>En esta fase inicial, alinearás tus valores con los de tu emprendimiento, harás una autoevaluación como emprendedor y realizarás un análisis de mercado para comprender tu entorno competitivo.</p></div><!-- /.project-hover-image -->
-                            </div>
-                        </div><!-- /.project-item-one -->
-                        <a href="project-details.html" class="project-one__item wow fadeInUp animated animated" data-wow-delay="200ms">
-                            <div class="project-one__item__wrapper">
-                                <span class="project-one__item__number"></span>
-                                <h3 class="project-one__item__title">Emerge</h3><!-- /.project-title -->
-                                <div class="project-one__item__btn"><span class="icon-down-right"></span></div><!-- /.project-btn -->
-                                <div class="project-one__item__hover"><img class="project-one__item__hover--img" src="assets/images/project/project-1-2.jpg" alt="ogency"></div><!-- /.project-hover-image -->
-                            </div>
-                        </a><!-- /.project-item-one -->
-                        <a href="project-details.html" class="project-one__item wow fadeInUp animated animated" data-wow-delay="300ms">
-                            <div class="project-one__item__wrapper">
-                                <span class="project-one__item__number"></span>
-                                <h3 class="project-one__item__title">Engage</h3><!-- /.project-title -->
-                                <div class="project-one__item__btn"><span class="icon-down-right"></span></div><!-- /.project-btn -->
-                                <div class="project-one__item__hover"><img class="project-one__item__hover--img" src="assets/images/project/project-1-3.jpg" alt="ogency"></div><!-- /.project-hover-image -->
-                            </div>
-                        </a><!-- /.project-item-one -->
-                        <a href="project-details.html" class="project-one__item wow fadeInUp animated animated" data-wow-delay="400ms">
-                            <div class="project-one__item__wrapper">
-                                <span class="project-one__item__number"></span>
-                                <h3 class="project-one__item__title">Deliver</h3><!-- /.project-title -->
-                                <div class="project-one__item__btn"><span class="icon-down-right"></span></div><!-- /.project-btn -->
-                                <div class="project-one__item__hover"><img class="project-one__item__hover--img" src="assets/images/project/project-1-4.jpg" alt="ogency"></div><!-- /.project-hover-image -->
-                            </div>
-                        </a><!-- /.project-item-one -->
-                    </div>
+                <div class="row d-flex justify-content-center align-items-center">
+                    <div class="col-xl-3 col-md-6 wow fadeInUp animated" data-wow-delay="300ms">
+                        <div class="service-three__item">
+                            <div class="service-three__item__thumb">
+                                <img src="assets/images/service/services-3-3.jpg" alt="ogency" />
+                            </div><!-- /.service-image -->
+                            <div class="service-three__item__normal">
+                                <h3 class="service-three__item__normal__title">Engage</h3>
+                            </div><!-- /.service-normal-content -->
+                            <div class="service-three__item__hover">
+                                <h3 class="service-three__item__hover__title">
+                                    <a href="web-application.html">Engage</a>
+                                </h3><!-- /.service-title -->
+                                <p class="service-three__item__hover__text">En esta fase, aprenderás a lanzar tus primeras campañas de marketing digital usando herramientas como Meta Ads, redes sociales y mailing, probando tanto estrategias orgánicas como pagadas para captar tu audiencia y medir los resultados iniciales.</p><!-- /.service-content -->
+                            </div><!-- /.service-hover-content -->
+                        </div><!-- /.service-card-three -->
+                    </div><!-- /.column -->
+                    <div class="col-xl-3 col-md-6 wow fadeInUp animated" data-wow-delay="400ms">
+                        <div class="service-three__item">
+                            <div class="service-three__item__thumb">
+                                <img src="assets/images/service/services-3-4.jpg" alt="ogency" />
+                            </div><!-- /.service-image -->
+                            <div class="service-three__item__normal">
+                                <h3 class="service-three__item__normal__title">Deliver</h3>
+                            </div><!-- /.service-normal-content -->
+                            <div class="service-three__item__hover">
+                                <h3 class="service-three__item__hover__title">
+                                    <a href="digital-marketing.html">Deliver</a>
+                                </h3><!-- /.service-title -->
+                                <p class="service-three__item__hover__text">Finalmente, ajustarás tus campañas según los resultados obtenidos, optimizando creativos y copys. Prepararás tu Elevator Pitch Final y lo presentarás en nuestro Demoday, donde validarás tu proyecto y recibirás feedback de expertos.</p><!-- /.service-content -->
+                            </div><!-- /.service-hover-content -->
+                        </div><!-- /.service-card-three -->
+                    </div><!-- /.column -->
                 </div>
             </div>
         </section>
-        <!-- Project End -->
+        <!-- Service Start -->
+
         <!-- Team Start -->
         <section class="team-one" id="team">
             <div class="container-fluid">
