--- a/program.html
+++ b/program.html
@@ -124,8 +124,8 @@
         <div class="page-header__overlay"></div>
         <!-- /.page-header__bg -->
         <div class="container">
-          <h2 class="page-header__title">
-            PICE Barcelona Emprenedoria Tecnológica
+          <h2 class="page-header__title text-center">
+            PICE Barcelona <br/>Emprenedoria Tecnológica
           </h2>
           <!-- /.page-title -->
         </div>
