--- a/program.html
+++ b/program.html
@@ -575,7 +575,7 @@
                           data-wow-delay="300ms"
                         >
                           <img
-                            src="assets/images/resources/why-choose-1-2.png"
+                            src="assets/images/resources/why-choose-1-2.jpg"
                             alt="ogency"
                           />
                         </div>
