--- a/index.html
+++ b/index.html
@@ -61,79 +61,7 @@
                     </div><!-- /.main-menu__logo -->
                     <div class="main-menu__nav">
                         <ul class="main-menu__list one-page-scroll-menu">
-                            <li class="dropdown megamenu scrollToLink current">
-                                <a href="#home">Home</a>
-                                <ul>
-                                    <li>
-                                        <section class="home-showcase">
-                                            <div class="container">
-                                                <div class="home-showcase__inner">
-                                                    <div class="row">
-                                                        <div class="col-lg-3">
-                                                            <div class="home-showcase__item">
-                                                                <div class="home-showcase__image">
-                                                                    <img src="assets/images/home-showcase/home-showcase-1-1.jpg" alt="">
-                                                                    <div class="home-showcase__buttons">
-                                                                        <a href="index.html" class="ogency-btn home-showcase__buttons__item">Multi
-                                                                            Page</a>
-                                                                        <a href="index-one-page.html" class="ogency-btn home-showcase__buttons__item">One
-                                                                            Page</a>
-                                                                    </div>
-                                                                    <!-- /.home-showcase__buttons -->
-                                                                </div><!-- /.home-showcase__image -->
-                                                                <h3 class="home-showcase__title">Homepage 01</h3><!-- /.home-showcase__title -->
-                                                            </div><!-- /.home-showcase__item -->
-                                                        </div><!-- /.col-lg-3 -->
-                                                        <div class="col-lg-3">
-                                                            <div class="home-showcase__item">
-                                                                <div class="home-showcase__image">
-                                                                    <img src="assets/images/home-showcase/home-showcase-1-2.jpg" alt="">
-                                                                    <div class="home-showcase__buttons">
-                                                                        <a href="index-2.html" class="ogency-btn home-showcase__buttons__item">Multi
-                                                                            Page</a>
-                                                                        <a href="index-2-one-page.html" class="ogency-btn home-showcase__buttons__item">One
-                                                                            Page</a>
-                                                                    </div>
-                                                                    <!-- /.home-showcase__buttons -->
-                                                                </div><!-- /.home-showcase__image -->
-                                                                <h3 class="home-showcase__title">Homepage 02</h3><!-- /.home-showcase__title -->
-                                                            </div><!-- /.home-showcase__item -->
-                                                        </div><!-- /.col-lg-3 -->
-                                                        <div class="col-lg-3">
-                                                            <div class="home-showcase__item">
-                                                                <div class="home-showcase__image">
-                                                                    <img src="assets/images/home-showcase/home-showcase-1-3.jpg" alt="">
-                                                                    <div class="home-showcase__buttons">
-                                                                        <a href="index-3.html" class="ogency-btn home-showcase__buttons__item">Multi
-                                                                            Page</a>
-                                                                        <a href="index-3-one-page.html" class="ogency-btn home-showcase__buttons__item">One
-                                                                            Page</a>
-                                                                    </div>
-                                                                    <!-- /.home-showcase__buttons -->
-                                                                </div><!-- /.home-showcase__image -->
-                                                                <h3 class="home-showcase__title">Homepage 03</h3><!-- /.home-showcase__title -->
-                                                            </div><!-- /.home-showcase__item -->
-                                                        </div><!-- /.col-lg-3 -->
-                                                        <div class="col-lg-3">
-                                                            <div class="home-showcase__item">
-                                                                <div class="home-showcase__image">
-                                                                    <img src="assets/images/home-showcase/home-showcase-1-4.jpg" alt="">
-                                                                    <div class="home-showcase__buttons">
-                                                                        <a href="index-light.html" class="ogency-btn home-showcase__buttons__item">View
-                                                                            Page</a>
-                                                                    </div>
-                                                                    <!-- /.home-showcase__buttons -->
-                                                                </div><!-- /.home-showcase__image -->
-                                                                <h3 class="home-showcase__title">Homepage 04</h3><!-- /.home-showcase__title -->
-                                                            </div><!-- /.home-showcase__item -->
-                                                        </div><!-- /.col-lg-3 -->
-                                                    </div><!-- /.row -->
-                                                </div><!-- /.home-showcase__inner -->
-                                            </div><!-- /.container -->
-                                        </section>
-                                    </li>
-                                </ul>
-                            </li>
+                            <li class="scrollToLink"><a href="#home">Home</a></li>
                             <li class="scrollToLink"><a href="#about">Ediciones 2025</a></li>
                             <li class="scrollToLink"><a href="#services">Talent list</a></li>
                             <li class="scrollToLink"><a href="#portfolio">Blog</a></li>
